--- a/hindi.html
+++ b/hindi.html
@@ -31,7 +31,7 @@
 					<h2>रिटेलर्स और व्होलेसलेर्स को कनेक्ट करते हैं हम </h2>
 					<p>अपने आवश्यक उत्पाद की गुणवत्ता और उनकी सर्वश्रेष्ठ कीमतों के साथ नए व्होलेसलेर्स खोजें।</p>
 					<p>एसएमएस पर या हमारे मोबाइल ऐप पर दैनिक मूल्य परिवर्तन प्राप्त करने के लिए अभी पंजीकरण करें।</p>
-					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=I%27m%20a%20retailer%20and%20I%20want%20to%20sign%20up%20on%20StoreKey."><img src="img/whatsapp.svg">WhatsApp पर साइनअप करें</a>
+					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=I%27m%20a%20retailer%20and%20I%20want%20to%20sign%20up%20on%20StoreKey."><img src="img/whatsapp.svg">साइनअप करें अभी</a>
 				</div>
 			</div>
 
