--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<h2>Connecting Retailers and Wholesalers</h2>
 					<p>Discover new wholesalers with your required quality of product and their best prices.</p>
 					<p>Signup now to receive daily price changes on SMS or on our mobile app.</p>
-					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=I%27m%20a%20retailer%20and%20I%20want%20to%20sign%20up%20on%20StoreKey."><img src="img/whatsapp.svg">Signup via WhatsApp</a>
+					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=I%27m%20a%20retailer%20and%20I%20want%20to%20sign%20up%20on%20StoreKey."><img src="img/whatsapp.svg">Signup on WhatsApp</a>
 				</div>
 			</div>
 
