--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Home | StoreKey</title>
-		<meta name="description" content="">
+		<title>घर | स्टोरकी</title>
+		<meta name="description" content="स्टोरकी रिटेलर्स को व्होलसेलर्स खोजने और उनसे जोड़ने में मदद करता है, और किराना माल के दैनिक मूल्य परिवर्तनों को ट्रैक करता है।">
 
 		<!-- css -->
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&amp;subset=devanagari" rel="stylesheet">
@@ -17,9 +17,9 @@
 		<div class="container">
 			<div class="header clearfix">
 				<img src="img/logo.svg">
-				<h1>StoreKey</h1>
+				<h1>स्टोरकी</h1>
 				<ul>
-					<li><a href="hindi.html">हिंदी</a></li>
+					<li><a href="english.html">English</a></li>
 				</ul>
 			</div>
 
@@ -28,32 +28,32 @@
 					<img src="img/phones.png">
 				</div>
 				<div class="col intro">
-					<h2>Connecting Retailers and Wholesalers</h2>
-					<p>Discover new wholesalers with your required quality of product and their best prices.</p>
-					<p>Signup now to receive daily price changes on SMS or on our mobile app.</p>
-					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=I%27m%20a%20retailer%20and%20I%20want%20to%20sign%20up%20on%20StoreKey."><img src="img/whatsapp.svg">Signup on WhatsApp</a>
+					<h2>रिटेलर्स और व्होलसेलर्स को जोड़तें हैं हम </h2>
+					<p>अपने आवश्यक किराना माल की गुणवत्ता और उनकी सर्वश्रेष्ठ कीमतों के साथ नए व्होलसेलर्स खोजें।</p>
+					<p>एस एम एस पर या हमारे मोबाइल ऐप पर दैनिक मूल्य परिवर्तन प्राप्त करने के लिए अभी पंजीकरण करें।</p>
+					<a class="btn" target="_blank" href="https://web.whatsapp.com/send?phone=919146376656&text=%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B0%E0%A4%BF%E0%A4%9F%E0%A5%87%E0%A4%B2%E0%A4%B0%20%E0%A4%B9%E0%A5%82%E0%A4%82%20%E0%A4%94%E0%A4%B0%20%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A5%8B%E0%A4%B0%E0%A4%95%E0%A5%80%20%E0%A4%AA%E0%A4%B0%20%E0%A4%B8%E0%A4%BE%E0%A4%87%E0%A4%A8%20%E0%A4%85%E0%A4%AA%20%E0%A4%95%E0%A4%B0%E0%A4%A8%E0%A4%BE%20%E0%A4%9A%E0%A4%BE%E0%A4%B9%E0%A4%A4%E0%A4%BE%20%E0%A4%B9%E0%A5%82%E0%A4%82%E0%A5%A4"><img src="img/whatsapp.svg">साइनअप करें अभी</a>
 				</div>
 			</div>
 
 			<div class="footer row">
 				<ul class="col">
-					<li>© Copyright, 2017</li>
-					<li>StoreKey Pvt. Ltd.</li>
-					<li>Pune, India</li>
+					<li>© कॉपीराइट, 2017</li>
+					<li>स्टोरकी प्राइवेट लिमिटेड</li>
+					<li>पुणे, भारत</li>
 				</ul>
 				<ul class="col">
 					<li><a href="mailto:contact@storekey.in">contact@storekey.in</a></li>
 					<li><a href="tel:+919146376656">+91-91463-76656</a></li>
 				</ul>
 				<ul class="col">
-					<li><a href="#">Android app for Retailer</a></li>
-					<li><a href="#">Android app for Wholesaler</a></li>
-					<li><a href="#">iOS app for Wholesaler</a></li>
+					<li><a href="#">रिटेलर के लिए एंड्रॉइड ऐप</a></li>
+					<li><a href="#">व्होलसेलर्स के लिए एंड्रॉइड ऐप</a></li>
+					<li><a href="#">व्होलसेलर्स के लिए आईओएस ऐप</a></li>
 				</ul>
 				<ul class="col">
-					<li><a href="#">Terms &amp; Conditions</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="#">Disclaimer</a></li>
+					<li><a href="#">नियम एवं शर्तें</a></li>
+					<li><a href="#">गोपनीयता नीति</a></li>
+					<li><a href="#">अस्वीकरण</a></li>
 				</ul>
 			</div>
 		</div>
