--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<h2>रिटेलर्स और व्होलसेलर्स को जोड़तें हैं हम </h2>
 					<p>अपने आवश्यक किराना माल की गुणवत्ता और उनकी सर्वश्रेष्ठ कीमतों के साथ नए व्होलसेलर्स खोजें।</p>
 					<p>एस एम एस पर या हमारे मोबाइल ऐप पर दैनिक मूल्य परिवर्तन प्राप्त करने के लिए अभी पंजीकरण करें।</p>
-					<a class="btn" target="_blank" href="https://web.whatsapp.com/send?phone=919146376656&text=%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B0%E0%A4%BF%E0%A4%9F%E0%A5%87%E0%A4%B2%E0%A4%B0%20%E0%A4%B9%E0%A5%82%E0%A4%82%20%E0%A4%94%E0%A4%B0%20%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A5%8B%E0%A4%B0%E0%A4%95%E0%A5%80%20%E0%A4%AA%E0%A4%B0%20%E0%A4%B8%E0%A4%BE%E0%A4%87%E0%A4%A8%20%E0%A4%85%E0%A4%AA%20%E0%A4%95%E0%A4%B0%E0%A4%A8%E0%A4%BE%20%E0%A4%9A%E0%A4%BE%E0%A4%B9%E0%A4%A4%E0%A4%BE%20%E0%A4%B9%E0%A5%82%E0%A4%82%E0%A5%A4"><img src="img/whatsapp.svg">साइनअप करें अभी</a>
+					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B0%E0%A4%BF%E0%A4%9F%E0%A5%87%E0%A4%B2%E0%A4%B0%20%E0%A4%B9%E0%A5%82%E0%A4%82%20%E0%A4%94%E0%A4%B0%20%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A5%8B%E0%A4%B0%E0%A4%95%E0%A5%80%20%E0%A4%AA%E0%A4%B0%20%E0%A4%B8%E0%A4%BE%E0%A4%87%E0%A4%A8%20%E0%A4%85%E0%A4%AA%20%E0%A4%95%E0%A4%B0%E0%A4%A8%E0%A4%BE%20%E0%A4%9A%E0%A4%BE%E0%A4%B9%E0%A4%A4%E0%A4%BE%20%E0%A4%B9%E0%A5%82%E0%A4%82%E0%A5%A4"><img src="img/whatsapp.svg">साइनअप करें अभी</a>
 				</div>
 			</div>
 
