hindi edit + screenshot update + app links
– updated a para in hindi
– app screenshot updated
– app links for retailers and wholesalers added

--- a/english.html
+++ b/english.html
@@ -45,12 +45,12 @@
 					<li><a href="mailto:contact@storekey.in">contact@storekey.in</a></li>
 					<li><a href="tel:+919146376656">+91-91463-76656</a></li>
 				</ul>
-				<!-- <ul class="col">
-					<li><a href="#">Android app for Retailer</a></li>
-					<li><a href="#">Android app for Wholesaler</a></li>
-					<li><a href="#">iOS app for Wholesaler</a></li>
-				</ul>
 				<ul class="col">
+					<li><a href="https://play.google.com/store/apps/details?id=com.storekey.retailer">Android app for Retailer</a></li>
+					<li><a href="https://play.google.com/store/apps/details?id=in.storekey.storekeywholesaler">Android app for Wholesaler</a></li>
+					<li><a href="https://itunes.apple.com/in/app/sk-wholesaler/id1219385004?mt=8">iOS app for Wholesaler</a></li>
+				</ul>
+				<!-- <ul class="col">
 					<li><a href="#">Terms &amp; Conditions</a></li>
 					<li><a href="#">Privacy Policy</a></li>
 					<li><a href="#">Disclaimer</a></li>
