--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<div class="col intro">
 					<h2>रिटेलर्स और व्होलसेलर्स को जोड़तें हैं हम </h2>
 					<p>अपने आवश्यक किराना माल की गुणवत्ता और उनकी सर्वश्रेष्ठ कीमतों के साथ नए व्होलसेलर्स खोजें।</p>
-					<p>एस एम एस पर या हमारे मोबाइल ऐप पर दैनिक मूल्य परिवर्तन प्राप्त करने के लिए अभी पंजीकरण करें।</p>
-					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?phone=919146376656&text=%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B0%E0%A4%BF%E0%A4%9F%E0%A5%87%E0%A4%B2%E0%A4%B0%20%E0%A4%B9%E0%A5%82%E0%A4%82%20%E0%A4%94%E0%A4%B0%20%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A5%8B%E0%A4%B0%E0%A4%95%E0%A5%80%20%E0%A4%AA%E0%A4%B0%20%E0%A4%B8%E0%A4%BE%E0%A4%87%E0%A4%A8%20%E0%A4%85%E0%A4%AA%20%E0%A4%95%E0%A4%B0%E0%A4%A8%E0%A4%BE%20%E0%A4%9A%E0%A4%BE%E0%A4%B9%E0%A4%A4%E0%A4%BE%20%E0%A4%B9%E0%A5%82%E0%A4%82%E0%A5%A4"><img src="img/whatsapp.svg">साइनअप करें अभी</a>
+					<p>आज ही हमारे मोबाइल ऐप या SMS के द्वारा रोज़ मार्केट की क़ीमतें प्राप्त करने के लिए रेजिस्टर करे।</p>
+					<a class="btn" target="_blank" href="https://api.whatsapp.com/send?l=hi&phone=919146376656&text=%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B0%E0%A4%BF%E0%A4%9F%E0%A5%87%E0%A4%B2%E0%A4%B0%20%E0%A4%B9%E0%A5%82%E0%A4%82%20%E0%A4%94%E0%A4%B0%20%E0%A4%AE%E0%A5%88%E0%A4%82%20%E0%A4%B8%E0%A5%8D%E0%A4%9F%E0%A5%8B%E0%A4%B0%E0%A4%95%E0%A5%80%20%E0%A4%AA%E0%A4%B0%20%E0%A4%B8%E0%A4%BE%E0%A4%87%E0%A4%A8%20%E0%A4%85%E0%A4%AA%20%E0%A4%95%E0%A4%B0%E0%A4%A8%E0%A4%BE%20%E0%A4%9A%E0%A4%BE%E0%A4%B9%E0%A4%A4%E0%A4%BE%20%E0%A4%B9%E0%A5%82%E0%A4%82%E0%A5%A4"><img src="img/whatsapp.svg">साइनअप करें अभी</a>
 				</div>
 			</div>
 
@@ -46,15 +46,15 @@
 					<li><a href="tel:+919146376656">+91-91463-76656</a></li>
 				</ul>
 				<ul class="col">
-					<li><a href="#">रिटेलर के लिए एंड्रॉइड ऐप</a></li>
-					<li><a href="#">व्होलसेलर्स के लिए एंड्रॉइड ऐप</a></li>
-					<li><a href="#">व्होलसेलर्स के लिए आईओएस ऐप</a></li>
+					<li><a href="https://play.google.com/store/apps/details?id=com.storekey.retailer">रिटेलर के लिए एंड्रॉइड ऐप</a></li>
+					<li><a href="https://play.google.com/store/apps/details?id=in.storekey.storekeywholesaler">व्होलसेलर्स के लिए एंड्रॉइड ऐप</a></li>
+					<li><a href="https://itunes.apple.com/in/app/sk-wholesaler/id1219385004?mt=8">व्होलसेलर्स के लिए आईओएस ऐप</a></li>
 				</ul>
-				<ul class="col">
+				<!-- <ul class="col">
 					<li><a href="#">नियम एवं शर्तें</a></li>
 					<li><a href="#">गोपनीयता नीति</a></li>
 					<li><a href="#">अस्वीकरण</a></li>
-				</ul>
+				</ul> -->
 			</div>
 		</div>
 	</body>
